[tool.poetry]
name = "cyberdiscovery.github.io"
version = "0.1.0"
description = "Utilities to build site."
authors = ["Yudhajit N <28938427+Sh3llcod3@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-bandit = "^2.1"
flake8-bugbear = "^19.3"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.2.3"
flake8-tidy-imports = "^2.0"
flake8-todo = "^0.7.0"
requests = "^2.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
