[tool.poetry]
name = "cyberdiscovery.github.io"
version = "3.0"
description = "Utilities to build site."
authors = ["Yudhajit N <28938427+Sh3llcod3@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-string-format = "*"
flake8-tidy-imports = "*"
flake8-todo = "*"
requests = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
